--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Romain Lefeuvre - Phd Student - Diverse Team - Irisa - University of Rennes - Inria '
+    description: 'Romain Lefeuvre - Phd Student - Diverse Team - IRISA - University of Rennes - Inria '
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
