--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Talks
     url: '#talks'
     weight: 30
+  - name : Posts
+    url: '#posts'
+    weight: 40
   - name: Experience
     url: '#section-experience'
     weight: 50
